--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,4 +1,5 @@
 const path = require('path');
+// import path from 'path';
 
 module.exports = {
     "config": path.resolve('./server/config', 'config.json'),
