--- a/server/.travis.yml
+++ b/server/.travis.yml
@@ -1,8 +1,21 @@
 language: node_js
-sudo: false
 node_js:
-  - "9.2.0"
-install:
-  - npm install
-script:
+  - 9
+  - "stable"
+env:
+  global:
+    - export NODE_ENV=test
+  script:
   - npm test
+  - npm run coverage
+  - npm install
+  after_success: 'npm run coveralls'
+
+#language: node_js
+#sudo: false
+#node_js:
+#  - "9.2.0"
+#install:
+#  - npm install
+#script:
+#  - npm test
