--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon ./server/bin/www --exec babel-node --presets es2015,stage-2",
     "build": "babel server",
-    "test": "mocha ./server/test/ --compilers js:babel-register"
+    "test": "nyc --reporter=html --reporter=text mocha ./server/test/ --compilers js:babel-register",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "author": "Gabriel Micah",
   "license": "ISC",
@@ -14,10 +16,15 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.0.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.4",
     "jquery": "^3.2.1",
     "morgan": "^1.9.0",
+    "nyc": "^11.2.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.11",
@@ -34,11 +41,13 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "coveralls": "^3.0.0",
     "eslint": "^4.11.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.5.1",
     "faker": "^4.1.0",
     "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.12.1",
     "webpack-config": "^7.5.0"
   }
