--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Event Manager application to create and manage your own event.",
   "main": "server/app.js",
   "scripts": {
-    "start": "babel-node ./server/app.js",
+    "start": "babel-node server/app --compilers js:babel-register",
     "start:dev": "nodemon ./server/app.js --exec --presets es2015,stage-2",
     "build": "babel server",
     "test": "nyc --reporter=html --reporter=text mocha ./server/test/ --compilers js:babel-register",
@@ -20,11 +20,12 @@
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
-    "jquery": "^3.2.1",
     "morgan": "^1.9.0",
     "nyc": "^11.2.1",
     "pg": "^7.4.0",
