--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,18 +1,18 @@
 {
   "development": {
     "username": "gabmicah",
-    "password": 12345,
+    "password": "gabmicah",
     "database": "boots_em_db",
-    "host": "127.0.0.1",
-    "port": 2000,
+    "host": "localhost",
+    "port": 5342,
     "dialect": "postgres"
   },
   "test": {
     "username": "gabmicah",
-    "password": 12345,
+    "password": "gabmicah",
     "database": "boots_em_test_db",
-    "host": "127.0.0.1",
-    "port": 2000,
+    "host": "localhost",
+    "port": 5342,
     "dialect": "postgres"
   },
   "production": {
