--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,4 @@
-const path = require('path');
-// import path from 'path';
+import path from 'path';
 
 module.exports = {
     "config": path.resolve('./server/config', 'config.json'),
