--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
   global:
     - export NODE_ENV=test
   script:
-  - travis_wait npm test
-  - travis_wait npm run coverage
-  - travis_wait npm install
+  - npm install
+  - npm test
+  - npm run coverage
 
   after_success: 'npm run coveralls'
