--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "An Event Manager application to create and manage your own event.",
   "main": "server/app.js",
   "scripts": {
-    "start": "babel-node server/app --compilers js:babel-register",
-    "start:dev": "nodemon ./server/app.js --exec --presets es2015,stage-2",
-    "build": "babel server",
+    "start": "babel-node server/app.js --compilers js:babel-register",
+    "start:dev": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2",
+    "build": "babel-node server/app.js",
     "test": "nyc --reporter=html --reporter=text mocha ./server/test/ --compilers js:babel-register",
-    "test:dev": "./node_modules/.bin/mocha --timeout 15000 --compilers js:babel-core/register server/test/*.js",
+    "test:dev": "./node_modules/.bin/mocha --exit --compilers js:babel-core/register server/test/*.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
