--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules/*
-coverage/
-.idea/
-.nyc_output/
-.env
-npm-debug.log*
-client/bower_components
+/node_modules/*
+/coverage/
+/.idea/
+/.nyc_output/
+/.env
+/npm-debug.log*
+/client/bower_components
