--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
-    "jsonwebtoken": "^8.0.1",
+    "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
@@ -31,6 +31,7 @@
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.11",
+    "validatorjs": "^3.13.5",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
