--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
@@ -27,6 +27,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "nyc": "^11.2.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
