--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
+    "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "nyc": "^11.2.1",
