--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Event Manager application to create and manage your own event.",
   "main": "server/app.js",
   "scripts": {
-    "start": "babel-node server/app.js --compilers js:babel-register",
+    "start": "babel-node ./server/app.js --compilers js:babel-register",
     "start:dev": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2",
     "build": "babel-node server/app.js",
     "test": "nyc --reporter=html --reporter=text mocha ./server/test/ --compilers js:babel-register",
@@ -40,6 +40,7 @@
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
@@ -55,7 +56,6 @@
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.12.1",
     "webpack-config": "^7.5.0"
   }
 }
