--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server/app.js",
   "scripts": {
     "build": "babel-node ./server/app.js",
-    "test": " nyc --reporter=html --reporter=text mocha ./server/tests/* --exit --require babel-register --reporter spec",
+    "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
-    "start": "nodemon --exec npm run babel-node -- ./server/app.js",
+    "start": "babel-node -- ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage"
