--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "babel-node ./server/app.js",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
-    "start": "babel-node -- ./server/app.js",
+    "start": "nodemon --exec npm run babel-node -- ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "test:dev": "npm run test && npm run coverage"
+    "test:dev": "npm run test && npm run coverage",
+    "postinstall": "npm run build"
   },
   "author": "Gabriel Micah",
   "license": "ISC",
