--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel-node ./server/app.js",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
-    "start": "nodemon --exec npm run babel-node -- ./server/app.js",
+    "start": "npm run babel-node -- ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage",
@@ -32,6 +32,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "cors": "^2.8.4",
+    "coveralls": "^3.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
@@ -40,6 +41,8 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
+    "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
@@ -51,12 +54,9 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
     "eslint": "^4.11.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.5.1",
-    "mocha": "^4.0.1",
-    "mocha-lcov-reporter": "^1.3.0",
     "webpack-config": "^7.5.0"
   }
 }
