--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
-    "mocha": "^4.0.1",
-    "mocha-lcov-reporter": "^1.3.0",
     "multer": "^1.3.0",
     "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
@@ -50,13 +48,15 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.11",
     "swagger-ui-express": "^2.0.11",
-    "validatorjs": "^3.13.5",
-    "webpack": "^3.8.1"
+    "validatorjs": "^3.13.5"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.5.1",
+    "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
+    "webpack": "^3.8.1",
     "webpack-config": "^7.5.0"
   }
 }
