--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "gabmicah",
+    "username": "admin",
+    "password": "password1",
     "database": "boots",
     "host": "localhost",
-    "port": 5342,
+    "port": 5432,
     "dialect": "postgres"
   },
   "test": {
@@ -16,11 +16,6 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
-    "password": "gabmicah",
-    "database": "boots",
-    "host": "localhost",
-    "port": 5342,
     "use_env_variable": "DATABASE_URL_PRODUCTION",
     "dialect": "postgres"
   }
