--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Gabriel Micah",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
@@ -33,7 +34,9 @@
     "chai-http": "^3.0.0",
     "cors": "^2.8.4",
     "coveralls": "^3.0.0",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
+    "expect": "^21.2.1",
     "express": "^4.16.2",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
@@ -43,12 +46,33 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "nodemon": "^1.12.1",
+    "node-sass": "^4.5.3",
     "nyc": "^11.2.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
+    "postcss": "^6.0.13",
+    "postcss-loader": "^2.0.7",
+    "precss": "^2.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.1",
+    "react-hot-loader": "^3.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
     "sequelize": "^4.22.11",
+    "sha1": "^1.1.1",
+    "shortid": "^2.2.8",
+    "style-loader": "^0.19.0",
+    "superagent": "^3.8.0",
     "swagger-ui-express": "^2.0.11",
-    "validatorjs": "^3.13.5"
+    "validatorjs": "^3.13.5",
+    "webpack": "^3.7.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
