--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "webpack": "webpack"
   },
   "author": "Gabriel Micah",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
     "babel-cli": "^6.26.0",
     "babel-core": "*",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-node5": "*",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "*",
     "babel-register": "^6.26.0",
@@ -38,6 +39,8 @@
     "dotenv": "^4.0.0",
     "expect": "^21.2.1",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
+    "image-webpack-loader": "^3.4.2",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
@@ -45,8 +48,8 @@
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "nodemon": "^1.12.1",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
