--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel-node ./server/app.js",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
-    "start": "nodemon --exec babel-node ./server/app.js",
+    "start": "babel-node ./server/app.js",
+    "start:dev": "webpack && nodemon --exec babel-node ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage",
@@ -33,6 +34,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "consolidate": "^0.15.0",
     "cors": "^2.8.4",
     "coveralls": "^3.0.0",
     "css-loader": "^0.28.7",
@@ -41,6 +43,7 @@
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "image-webpack-loader": "^3.4.2",
+    "jade": "^1.11.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
@@ -61,6 +64,7 @@
     "react-dropzone": "^4.2.1",
     "react-hot-loader": "^3.0.0",
     "react-redux": "^5.0.6",
+    "react-redux-loading-bar": "^3.0.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
