--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expect": "^21.2.1",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
+    "history": "^4.7.2",
     "image-webpack-loader": "^3.4.2",
     "jade": "^1.11.0",
     "jquery": "^3.2.1",
