--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "coveralls": "^3.0.0",
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
+    "es6-promise": "^4.1.1",
     "expect": "^21.2.1",
     "express": "^4.16.2",
+    "fetch-ie8": "^1.5.0",
     "file-loader": "^1.1.5",
     "history": "^4.7.2",
     "image-webpack-loader": "^3.4.2",
