--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "classnames": "^2.2.5",
     "consolidate": "^0.15.0",
     "cors": "^2.8.4",
     "coveralls": "^3.0.0",
@@ -62,7 +63,10 @@
     "postcss": "^6.0.13",
     "postcss-loader": "^2.0.7",
     "precss": "^2.0.0",
+    "prop-types": "^15.6.0",
+    "query-string": "^5.0.1",
     "react": "^16.0.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
     "react-hot-loader": "^3.0.0",
@@ -79,6 +83,8 @@
     "style-loader": "^0.19.0",
     "superagent": "^3.8.0",
     "swagger-ui-express": "^2.0.11",
+    "uuid": "^3.1.0",
+    "validator": "^9.2.0",
     "validatorjs": "^3.13.5",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.12.0",
