fix: complete react redux authentication action for sign-in and sign-up.

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -3,7 +3,7 @@
     "username": "admin",
     "password": "password1",
     "database": "boots",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
   },
@@ -11,7 +11,7 @@
     "username": "postgres",
     "password": "gabmicah",
     "database": "boots",
-    "host": "localhost",
+    "host": "127.0.0.1",
     "port": 5342,
     "dialect": "postgres"
   },
