--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-redux-loading-bar": "^3.0.3",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-select": "^1.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
