--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "classnames": "^2.2.5",
+    "connect-multiparty": "^2.1.0",
     "consolidate": "^0.15.0",
     "cors": "^2.8.4",
     "coveralls": "^3.0.0",
@@ -52,9 +53,11 @@
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
+    "material-ui": "^0.20.0",
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "multiparty": "^4.1.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
