--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "babel-node ./server/app.js",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
-    "start": "babel-node ./server/app.js",
-    "start:dev": "webpack && nodemon --exec babel-node ./server/app.js",
+    "start": "nodemon --exec babel-node ./server/app.js",
+    "start:dev": "npm run webpack && nodemon --exec babel-node ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage",
     "postinstall": "npm run build",
-    "webpack": "webpack"
+    "webpack": "webpack --watch"
   },
   "author": "Gabriel Micah",
   "license": "ISC",
@@ -35,6 +35,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "classnames": "^2.2.5",
+    "cloudinary": "^1.9.1",
     "connect-multiparty": "^2.1.0",
     "consolidate": "^0.15.0",
     "cors": "^2.8.4",
