--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   },
   "devDependencies": {
     "eslint": "^4.11.0",
+    "eslint-config-airbnb":"*",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.0.1",
