--- a/package.json
+++ b/package.json
@@ -96,9 +96,10 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb":"*",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
