--- a/package.json
+++ b/package.json
@@ -96,13 +96,17 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "jest": "^22.3.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
+    "react-test-renderer": "^16.2.0",
     "webpack": "^3.8.1",
     "webpack-config": "^7.5.0"
   }
