--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
     "start": "nodemon --exec babel-node ./server/app.js",
-    "start:dev": "npm run webpack && nodemon --exec babel-node ./server/app.js",
+    "start:dev": "npm run webpack",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage",
