--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "./server/app.js",
   "scripts": {
     "build": "npm run build:client",
+    "clean": "rm -rf build && mkdir build",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
-    "start": "babel-node -- ./server/app.js",
+    "start": "node -- ./build/app.js",
+    "start:dev": "babel-node -- ./server/app.js",
     "build:client": "webpack --config webpack.config.js",
+    "build:server": "babel -d ./build ./server -s",
     "start:client": "npm run webpack",
-    "start:server": "nodemon --exec npm run start",
+    "start:server": "nodemon --exec npm run start:dev",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "test:dev": "npm run test && npm run coverage",
@@ -74,6 +77,7 @@
     "multer": "^1.3.0",
     "multiparty": "^4.1.3",
     "node-sass": "^4.5.3",
+    "nodemailer": "^4.5.0",
     "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
     "pg": "^7.4.0",
