--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "./server/app.js",
   "scripts": {
     "build": "babel-node ./server/app.js",
+    "test:client": "jest",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
+    "build:server": "babel -d ./build ./server -s",
     "start": "nodemon --exec babel-node ./server/app.js",
     "start:dev": "npm run webpack && nodemon --exec babel-node ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
