clean: safety changes.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npm run build:client",
     "clean": "rm -rf build && mkdir build",
+    "test:client": "jest --coverage",
     "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
     "start": "node -- ./build/app.js",
