--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "webpack-hot-middleware": "^2.19.1"
   },
   "devDependencies": {
+    "compression-webpack-plugin": "^1.1.10",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
