--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "sequelize": "^4.22.11",
+    "sequelize": "^4.35.2",
+    "sequelize-cli": "^4.0.0",
     "sha1": "^1.1.1",
     "shortid": "^2.2.8",
     "style-loader": "^0.19.0",
