--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "build": "npm run build:client",
     "clean": "rm -rf build && mkdir build",
-    "test:client": "jest --coverage",
-    "test": " nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-register --reporter spec",
     "babel-node": "babel-node --preset=es2015",
     "start": "node -- ./build/app.js",
     "start:dev": "nodemon --exec babel-node -- ./server/app.js",
@@ -17,7 +15,11 @@
     "start:server": "nodemon --exec npm run start",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "test:dev": "npm run test && npm run coverage",
+    "test": "npm run test:server && npm run test:client",
+    "test:client": "jest --coverage",
+    "test:server": "nyc --reporter=html --reporter=text mocha --timeout 500000 --exit --require babel-core/register server/test/*test.js",
+    "test:dev:server": "nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-node/register --reporter spec",
+    "test:dev": "npm test && npm run coverage",
     "webpack": "webpack --watch"
   },
   "repository": {
@@ -108,6 +110,7 @@
     "shortid": "^2.2.8",
     "style-loader": "^0.19.0",
     "superagent": "^3.8.0",
+    "supertest": "^3.0.0",
     "swagger-ui-express": "^2.0.11",
     "uuid": "^3.1.0",
     "validator": "^9.2.0",
