--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - export NODE_ENV=test
   script:
   - npm install
-  - npm test
+  - npm run test
   - npm run coverage
 
   after_success: 'npm run coveralls'
