--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "start:dev": "npm run webpack && nodemon --exec babel-node ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "test": "npm run test:server && npm run test:client",
+    "test": "npm run create:test && npm run migrate:test && npm run test:server",
     "test:client": "jest --coverage",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/*test.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
     "webpack": "webpack --watch",
-    "migrate:test": "cross-env NODE_ENV=test sequelize db:migrate --env test"
+    "drop:test":"sequelize db:drop boots_test",
+    "migrate:test": "cross-env NODE_ENV=test sequelize db:migrate --env test",
+    "create:test": "sequelize db:create boots_test && npm run migrate:test"
   },
   "nyc": {
     "exclude": [
