--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
     "build": "babel-node ./server/app.js",
     "babel-node": "babel-node --preset=es2015",
     "build:server": "babel -d ./build ./server -s",
-    "start": "nodemon --exec babel-node ./server/app.js",
-    "start:dev": "npm run webpack && nodemon --exec babel-node ./server/app.js",
+    "start": "node --exec ./build/app.js",
+    "start:dev": "nodemon --exec babel-node ./server/app.js",
+    "start:client": "npm run webpack",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "test": "npm run create:test && npm run migrate:test && npm run test:server",
+    "test": "npm run drop:test && npm run migrate:test && npm run test:server",
     "test:client": "jest --coverage",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/*test.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
     "webpack": "webpack --watch",
-    "drop:test":"sequelize db:drop boots_test",
+    "drop:test":"sequelize db:migrate:undo:all",
     "migrate:test": "cross-env NODE_ENV=test sequelize db:migrate --env test",
     "create:test": "sequelize db:create boots_test && npm run migrate:test"
   },
   "nyc": {
     "exclude": [
-      "server/middleware/**",
+      "server/middleware/mailer.js",
       "server/app.js"
     ]
   },
