chore: written tests for event, centers and users

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start:client": "npm run webpack",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "test": "npm run drop:test && npm run migrate:test && npm run test:server",
+    "test": "npm run migrate:test && npm run test:server",
+    "test:local": "npm run drop:test && npm run migrate:test && npm run test:server",
     "test:client": "jest --coverage",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/*test.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/* --exit --require babel-node/register --reporter spec",
