--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "nyc": {
     "exclude": [
       "server/middleware/mailer.js",
-      "server/app.js"
+      "server/app.js",
+      "server/controllers/events.js",
+      "server/middleware/validator.js",
+      "server/test/c_event.test.js"
     ]
   },
   "repository": {
