--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build:client",
     "clean": "rm -rf build && mkdir build",
     "babel-node": "babel-node --preset=es2015",
-    "start": "node -- ./build/app.js",
+    "start": "npm run build:server && node -- ./build/app.js",
     "start:dev": "nodemon --exec babel-node -- ./server/app.js",
     "build:client": "webpack --config webpack.config.js",
     "build:server": "babel -d ./build ./server -s",
