--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run build:server && node -- ./build/app.js",
     "start:dev": "nodemon --exec babel-node -- ./server/app.js",
     "build:client": "webpack --config webpack.config.js",
-    "build:server": "babel -d ./build ./server -s",
+    "build:server": "babel -d ./build --copy-files ./server -s",
     "start:client": "npm run webpack",
     "start:server": "nodemon --exec npm run start",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
