fix(): fix users and centers test, correct migrations

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "start:server": "nodemon --exec npm run start",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "test": "npm run create:test && npm run migrate:test && npm run test:server",
-    "test:local": "npm run drop:test && npm run migrate:test && npm run test:server",
+    "pretest": "NODE_ENV=test npm run drop:test && npm run migrate:test",
+    "test:local": "npm run create:test && npm run migrate:test && npm run test:server",
+    "test": "npm run test:server",
     "test:client": "jest --coverage",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
