--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,10 +36,7 @@
     "class-methods-use-this": 0,
     "array-callback-return": 0,
     "prefer-const": 0,
-    "curly": [
-      "error",
-      "multi-line"
-    ],
+    "curly": ["error", "multi-line"],
     "import/no-unresolved": [
       2,
       {
@@ -49,12 +46,7 @@
     "no-shadow": [
       "error",
       {
-        "allow": [
-          "req",
-          "res",
-          "err",
-          "data"
-        ]
+        "allow": ["req", "res", "err", "data"]
       }
     ],
     "valid-jsdoc": [
