--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ before_script:
 - npm install
 script:
   - npm run test
+after_success:
+  - codeclimate-test-reporter < coverage/lcov.info
   - npm run coverage
-after_success: 'npm run coveralls'
