add: build badge for this branch

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed",
     "drop:test": "sequelize db:migrate:undo:all",
-    "migrate:test": "sequelize db:migrate --env test"
+    "migrate:test": "sequelize db:migrate --env test",
+    "create:test": "sequelize db:create boots_test"
   },
   "nyc": {
     "exclude": [
