chore: complete written tests for events api endpoints

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start:server": "nodemon --exec npm run start",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "pretest": "NODE_ENV=test npm run migrate:test",
+    "pretest": "NODE_ENV=test npm run drop:test && npm run migrate:test",
     "test:local": "npm run create:test && npm run migrate:test && npm run test:server",
     "test": "npm run test:server",
     "test:client": "jest --coverage",
@@ -31,8 +31,11 @@
   },
   "nyc": {
     "exclude": [
-      "server/middleware/**",
-      "server/app.js"
+      "server/middleware/imageUploader.js",
+      "server/middleware/mailer.js",
+      "server/models/user.js",
+      "server/app.js",
+      "server/routes/administrator.js"
     ]
   },
   "repository": {
