--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
-    "material-ui": "^0.20.0",                                                                                                                                                                                                                                                                                                                               
+    "material-ui": "^0.20.0",
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -103,6 +103,7 @@
     "nodemailer": "^4.5.0",
     "nodemon": "^1.12.1",
     "nyc": "^11.2.1",
+    "open-browser-webpack-plugin": "0.0.5",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "postcss": "^6.0.13",
@@ -114,7 +115,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.1",
-    "react-hot-loader": "^3.0.0",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-redux-loading-bar": "^3.0.3",
     "react-router": "^4.2.0",
@@ -152,6 +153,7 @@
     "jest": "^22.3.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "webpack-dev-server": "^3.1.4"
   }
 }
