--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
     "no-dupe-keys": 0,
     "no-restricted-globals": 0,
     "no-undef": 0,
+    "no-mixed-operators": 0,
+    "dot-notation": 0,
     "class-methods-use-this": 0,
     "array-callback-return": 0,
     "prefer-const": 0,
@@ -46,7 +48,7 @@
     "no-shadow": [
       "error",
       {
-        "allow": ["req", "res", "err", "data"]
+        "allow": ["req", "res", "err", "data", "dispatch", "centerApi"]
       }
     ],
     "valid-jsdoc": [
