fix: use secret-key on front-end and modify app.js to serve index.html when route is '/' and 404 response when route is not found

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,8 +39,9 @@
     "array-callback-return": 0,
     "prefer-const": 0,
     "curly": ["error", "multi-line"],
+    "import/extensions": 0,
     "import/no-unresolved": [
-      2,
+      0,
       {
         "commonjs": true
       }
