--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "max-len": 0,
     "no-dupe-keys": 0,
     "no-restricted-globals": 0,
+    "no-useless-escape": 0,
     "no-undef": 0,
     "no-mixed-operators": 0,
     "dot-notation": 0,
