fix: removed build folders and complete and fix center search faster form

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-node": "babel-node --preset=es2015",
     "start": "npm run build:server && node -- ./build/app.js",
     "start:dev": "nodemon --exec babel-node -- ./server/app.js",
-    "build:client": "webpack --config webpack.config.js",
+    "build:client": "webpack --config webpack.prod.js",
     "build:server": "babel -d ./build --copy-files ./server -s",
     "start:client": "npm run webpack",
     "start:server": "nodemon --exec npm run start",
@@ -22,7 +22,7 @@
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
-    "webpack": "webpack --watch",
+    "webpack": "webpack --config webpack.dev.js --watch",
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed",
     "drop:test": "sequelize db:migrate:undo:all",
@@ -132,13 +132,15 @@
     "superagent": "^3.8.0",
     "supertest": "^3.0.0",
     "swagger-ui-express": "^2.0.11",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "uuid": "^3.1.0",
     "validator": "^9.2.0",
     "validatorjs": "^3.13.5",
     "webpack": "^3.8.1",
     "webpack-config": "^7.5.0",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1"
+    "webpack-hot-middleware": "^2.19.1",
+    "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
     "babel-preset-react-hmre": "^1.1.1",
