--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "An Event Manager application to create and manage your own event.",
   "main": "./server/app.js",
+  "engines": {
+    "node": "9.11.1",
+    "npm": "5.6.0"
+    },
   "scripts": {
     "build": "npm run clean && npm run build:server && npm run build:client",
     "clean": "rm -rf build && mkdir build",
