fix: fix all buggy front-end issues

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 SECRET_KEY=<secret-key>
 DATA_LIMIT=<response-data-limit>
-EMAIL=<moderator's-email>
-PASSWORD=<moderator's-password>
+EMAIL=<moderators-email>
+PASSWORD=<moderators-password>
+CLOUDINARY_UPLOAD_PRESET=<CLOUDINARY_UPLOAD_PRESET>
+CLOUDINARY_URL=<CLOUDINARY_URL>
 ####DATABASE_URL=<database-url-to-postgres>
