--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "node": "9.11.1",
     "npm": "5.6.0"
-    },
+  },
   "scripts": {
     "build": "npm run clean && npm run build:server && npm run build:client",
     "clean": "rm -rf build && mkdir build",
@@ -92,6 +92,7 @@
     "fetch-ie8": "^1.5.0",
     "file-loader": "^1.1.5",
     "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^3.4.2",
     "jade": "^1.11.0",
     "jquery": "^3.2.1",
@@ -99,6 +100,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -140,7 +142,7 @@
     "uuid": "^3.1.0",
     "validator": "^9.2.0",
     "validatorjs": "^3.13.5",
-    "webpack": "^3.8.1",
+    "webpack": "^4.4.1",
     "webpack-config": "^7.5.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
@@ -160,6 +162,7 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "react-test-renderer": "^16.2.0",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   }
 }
