chore(test-setup): setup tests folders and config and write helper functions test

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "boots-event-manager",
   "version": "1.0.0",
-  "description": "An Event Manager application to create and manage your own event.",
+  "description":
+    "An Event Manager application to create and manage your own event.",
   "main": "./server/app.js",
   "engines": {
     "node": "9.11.1",
@@ -20,11 +21,14 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "pretest": "NODE_ENV=test npm run migrate:test",
-    "test:local": "npm run create:test && npm run migrate:test && npm run test:server",
+    "test:local":
+      "npm run create:test && npm run migrate:test && npm run test:server",
     "test": "npm run test:server",
-    "test:client": "jest --coverage",
-    "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
-    "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
+    "test:client": "jest ./client/__tests__/**/** --coverage",
+    "test:server":
+      "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
+    "test:dev:server":
+      "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
     "webpack": "webpack --config webpack.dev.js --watch",
     "migrate": "sequelize db:migrate",
@@ -54,8 +58,20 @@
   },
   "homepage": "https://github.com/topseysuave/event-manager#readme",
   "nodemonConfig": {
-    "ignore": [
-      "client/*"
+    "ignore": ["client/*"]
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./client/__tests__/setup.js",
+    "collectCoverage": true,
+    "collectCoverageFrom": ["client/src/**", "!client/src/index.jsx"],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/server/",
+      "/build/",
+      "/client/src/registerServiceWorker.js",
+      "/client/src/rootReducer.js",
+      "/client/src/util/",
+      "/client/src/helpers/authCheck.js"
     ]
   },
   "dependencies": {
@@ -159,6 +175,7 @@
     "eslint-plugin-react": "^7.6.1",
     "faker": "^4.1.0",
     "jest": "^22.3.0",
+    "jsdom": "^11.11.0",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "react-test-renderer": "^16.2.0",
