--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,11 @@ global:
 before_script:
 - psql -c "CREATE DATABASE \"boots_test\";" -U postgres
 - npm install
+install:
+  - npm install -g codecov
 script:
   - npm run test
+  - codecov
 after_success:
   - codeclimate-test-reporter < coverage/lcov.info
   - npm run coverage
