--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf build && mkdir build",
     "babel-node": "babel-node --preset=es2015",
     "start": "npm run clean && npm run build:server && node -- ./build/app.js",
-    "start:dev": "nodemon --exec babel-node -- ./server/app.js",
+    "start:dev": "npm run start:client & nodemon --exec babel-node -- ./server/app.js",
     "build:client": "webpack --config webpack.prod.js",
     "build:server": "babel -d ./build --copy-files ./server -s",
     "start:client": "npm run webpack",
@@ -22,7 +22,7 @@
     "pretest": "NODE_ENV=test npm run migrate:test",
     "test:local": "npm run create:test && npm run migrate:test && npm run test:server",
     "test": "npm run test:server",
-    "test:client": "jest --coverage --watch",
+    "test:client": "jest -u ./client/__tests__/**/** --coverage --watch",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
@@ -59,12 +59,15 @@
     ]
   },
   "jest": {
+    "verbose": true,
     "testRegex": "client/__tests__/.*\\.test\\.(js|jsx)$",
     "setupTestFrameworkScriptFile": "./client/__tests__/setup.js",
     "collectCoverage": true,
     "collectCoverageFrom": [
       "client/src/**",
-      "!client/src/index.jsx"
+      "!client/src/index.jsx",
+      "!client/src/components/modals/centerModalForms/*.*",
+      "!client/src/components/modals/eventModalForm/*.*"
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
@@ -184,6 +187,7 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moxios": "^0.4.0",
+    "react-router-enzyme-context": "^1.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
     "webpack-cli": "^2.1.3",
