chore(e2e-tests): setup for e2e testing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:client": "webpack --config webpack.prod.js",
     "build:server": "babel -d ./build --copy-files ./server -s",
     "start:client": "npm run webpack",
-    "start:server": "nodemon --exec npm run start",
+    "start:server": "nodemon --exec babel-node -- ./server/app.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "pretest": "NODE_ENV=test npm run migrate:test",
@@ -31,7 +31,8 @@
     "seed": "sequelize db:seed",
     "drop:test": "sequelize db:migrate:undo:all",
     "migrate:test": "sequelize db:migrate --env test",
-    "create:test": "sequelize db:create boots_test --env test"
+    "create:test": "sequelize db:create boots_test --env test",
+    "e2e": "nightwatch"
   },
   "nyc": {
     "exclude": [
