chore(component-test): complete components and actions test remaining e2e

--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
       "/client/src/registerServiceWorker.js",
       "/client/src/rootReducer.js",
       "/client/src/util/",
+      "/client/src/actions/modalAction.js",
+      "/client/src/actions/searchAction.js",
+      "/client/src/actions/events-actions/index.js",
       "/client/src/helpers/authCheck.js"
     ],
     "testPathIgnorePatterns": [
