--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "pretest": "NODE_ENV=test npm run migrate:test",
     "test:local": "npm run create:test && npm run migrate:test && npm run test:server",
-    "test": "npm run test:server",
-    "test:client": "jest -u ./client/__tests__/**/** --coverage --watch",
+    "test": "npm run test:server && npm run test:client",
+    "test:client": "jest -u ./client/__tests__/**/** --coverage && codecov",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
