--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     ]
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "axios": "^0.16.2",
     "babel-cli": "^6.26.0",
     "babel-core": "*",
@@ -127,6 +128,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.20.0",
+    "materialize-css": "^0.100.2",
     "mini-css-extract-plugin": "^0.4.0",
     "moment": "^2.19.3",
     "morgan": "^1.9.0",
@@ -170,6 +172,7 @@
     "validator": "^9.2.0",
     "validatorjs": "^3.13.5",
     "webpack": "^4.4.1",
+    "webpack-cli": "^2.1.3",
     "webpack-config": "^7.5.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
@@ -194,7 +197,6 @@
     "react-router-enzyme-context": "^1.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
-    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   }
 }
