--- a/package.json
+++ b/package.json
@@ -175,8 +175,6 @@
     "webpack": "^4.4.1",
     "webpack-cli": "^2.1.3",
     "webpack-config": "^7.5.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.2"
   },
   "devDependencies": {
@@ -198,6 +196,8 @@
     "react-router-enzyme-context": "^1.2.0",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1"
   }
 }
