fix(): heroku run build on start-up

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run clean && npm run build:server && npm run build:client",
     "clean": "rm -rf build && mkdir build",
     "babel-node": "babel-node --preset=es2015",
-    "start": "npm run clean && npm run build:server && npm run build:client && node -- ./build/app.js",
+    "start": "npm run clean && npm run build:server && node -- ./build/app.js",
     "start:dev": "npm run start:client & nodemon --exec babel-node -- ./server/app.js",
     "build:client": "webpack --config webpack.prod.js",
     "build:server": "babel -d ./build --copy-files ./server -s",
@@ -22,7 +22,7 @@
     "pretest": "NODE_ENV=test npm run drop:db && npm run create:db && npm run migrate:test",
     "test:local": "npm run pretest && npm run test:server",
     "test": "npm run pretest && npm run test:server && npm run test:client",
-    "test:client": "jest -u client/__tests__/**/** && codecov",
+    "test:client": "nyc --reporter=html --reporter=text jest -u client/__tests__/**/**",
     "test:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha --timeout 20000 --exit --require babel-core/register server/test/index.js",
     "test:dev:server": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text mocha ./server/test/index.js --exit --require babel-node/register --reporter spec",
     "test:dev": "npm test && npm run coverage",
